--- a/css/teilnehmerS2.css
+++ b/css/teilnehmerS2.css
@@ -25,6 +25,10 @@ body {
   .logo {
     width: 100px;
   }
+
+  .active {
+    background-color: #0b372dbb; /* oder jede gewünschte Farbe */
+  }
   
   header {
     position: absolute;
