--- a/style.css
+++ b/style.css
@@ -111,9 +111,10 @@ header ul a {
 
 main {
   position: relative;
-  height: 100vh;
-  width: 100vw;
+  height: 100svh;
+  width: 100svw;
   overflow: hidden;
+  max-height: 100svh !important;
 }
 
 .parallax {
