--- a/css/teilnehmerS2.css
+++ b/css/teilnehmerS2.css
@@ -18,84 +18,118 @@ body {
 }
 
 ::selection {
-    background-color: #0b372dbb;
-  }
- 
-  /* Header */
-  .logo {
-    width: 100px;
+  background-color: #0b372dbb;
+}
+
+/* Header */
+.logo {
+  width: 100px;
+}
+
+.active {
+  background-color: #0b372dbb;
+
+}
+
+header {
+  position: absolute;
+  z-index: 9999;
+  width: 100%;
+  padding: 0.9rem 0;
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+header nav {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+header nav ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+header nav ul li {
+  padding: 0 1.5rem;
+}
+
+header nav .dropdown-menu {
+  display: none; 
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  z-index: 999;
+  backdrop-filter: blur(10px); 
+}
+
+header nav .dropdown-menu li {
+  width: 100%;
+}
+
+@media (max-width: 760px) {
+  header nav ul:not(.dropdown-menu) {
+    display: none; 
   }
 
-  .active {
-    background-color: #0b372dbb; /* oder jede gewünschte Farbe */
+  header nav .dropdown-menu {
+    display: none; 
+  }
+
+  header nav .dropdown-menu.show {
+    display: block;
+    text-align: center;
+    background: transparent;
+    height: 100svh;
+    border: none;
+  }
+
+  header nav .dropdown-menu.show li {
+    padding: 2rem;
+  }
+
+  header nav .dropdown-menu.show li a {
+    background-color: #ffffff84;
+    border-radius: 30px;
+    padding: 1rem;
   }
   
-  header {
-    position: absolute;
-    z-index: 9999;
-    width: 100%;
-    padding: 0.9rem 0;
-    top: 0;
-    left: 0;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-  }
+
   
-  header nav {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 2rem;
+  header nav .hamburger {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    margin-left: 1.5rem;
+    cursor: pointer;
   }
-  
-  header ul {
-    display: flex;
-    list-style: none;
-    align-items: center;
-  }
-  
-  header ul a {
-    text-decoration: none;
-    color: #333;
-    padding: 0 1.5rem;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 1rem;
-  }
-  
-  .search a {
-    font-size: 1.05rem;
-    padding: 0 3rem;
-  }
-  
-  .hamburger {
-    padding-left: 1.5rem;
-  }
-  
-  .hamburger a {
-    padding: 0;
-    width: 37px;
-    height: 37px;
-    display: flex;
-    border-radius: 50%;
-    background-color: rgba(115, 115, 115, 0.7);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .hamburger .bar {
+
+  header nav .hamburger .bar {
     position: relative;
     width: 52%;
     height: 1.3px;
     background-color: #fff;
     border-radius: 2px;
   }
-  
-  .hamburger .bar::before,
-  .hamburger .bar::after {
+
+  header nav .hamburger .bar::before,
+  header nav .hamburger .bar::after {
     content: "";
     position: absolute;
     left: 50%;
@@ -105,199 +139,274 @@ body {
     background-color: inherit;
     border-radius: 2px;
   }
-  
-  .hamburger .bar::before {
+
+  header nav .hamburger .bar::before {
     top: -4.5px;
   }
-  
-  .hamburger .bar::after {
+
+  header nav .hamburger .bar::after {
     top: 4.5px;
   }
+}
+
+header ul a {
+  text-decoration: none;
+  color: #333;
+  padding: 0 1.5rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.search a {
+  font-size: 1.05rem;
+  padding: 0 3rem;
+}
+
+.hamburger {
+  padding-left: 1.5rem;
+  display: none;
+}
+
+.hamburger a {
+  padding: 0;
+  width: 37px;
+  height: 37px;
+  display: flex;
+  border-radius: 50%;
+  background-color: rgba(115, 115, 115, 0.7);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  justify-content: center;
+  align-items: center;
+}
+
+.hamburger .bar {
+  position: relative;
+  width: 52%;
+  height: 1.3px;
+  background-color: #fff;
+  border-radius: 2px;
+}
+
+.hamburger .bar::before,
+.hamburger .bar::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%;
+  height: 100%;
+  background-color: inherit;
+  border-radius: 2px;
+}
+
+.hamburger .bar::before {
+  top: -4.5px;
+}
+
+.hamburger .bar::after {
+  top: 4.5px;
+}
+
 /* Header Ende */
 
-  main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 main img {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-  }
-
-  /* Card */
-
-  .cardContainer {
-    display: flex;
-    gap: 60px 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    /* width: 100vw; */
-    padding: 80px 20px 0 20px;
-    position: absolute;
-    top: 100px;
-    height: 100svh;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
-  
 
-  .card {
-    position: relative;
-    width: 350px;
-    height: 190px;
-    background-color: #333;
-    transition: 0.5s;
-  }
-  .card:hover {
-    height: 450px;
-  }
-  .card .lines {
-    position: absolute;
-    inset: 0;
-    background: #000;
-    overflow: hidden;
-  }
-  .card .lines::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    height: 120px;
-    background: linear-gradient(transparent, #45f3ff,
-    #45f3ff, #45f3ff, transparent);
-    animation: animate 4s linear infinite;
-  }
-  
-  @keyframes animate {
-    0%
-    {
-      transform: translate(-50%, -50%) rotate(0deg);
-    }
-    100%
-    {
-      transform: translate(-50%, -50%) rotate(360deg);
-    }
+@media (max-width: 450px) {
+  .main img {
+    width: unset !important;
+    height: unset !important;
   }
 
-  .card .lines::after {
-    content: "";
-    position: absolute;
-    background: #292929;
-    inset: 3px;
+}
+
+/* Card */
+
+.cardContainer {
+  display: flex;
+  gap: 60px 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100vw;
+  padding: 80px 20px 0 20px;
+  position: absolute;
+  top: 100px;
+}
+
+
+.card {
+  position: relative;
+  width: 350px;
+  height: 190px;
+  background-color: #333;
+  transition: 0.5s;
+}
+
+.card:hover {
+  height: 450px;
+}
+
+.card .lines {
+  position: absolute;
+  inset: 0;
+  background: #000;
+  overflow: hidden;
+}
+
+.card .lines::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+  height: 120px;
+  background: linear-gradient(transparent, #45f3ff,
+      #45f3ff, #45f3ff, transparent);
+  animation: animate 4s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
   }
 
-  .card .imgBx {
-    position: absolute;
-    top: -50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 150px;
-    height: 150px;
-    background: #000;
-    transition: 0.5s;
-    z-index: 10;
-    overflow: hidden;
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+.card .lines::after {
+  content: "";
+  position: absolute;
+  background: #292929;
+  inset: 3px;
+}
+
+.card .imgBx {
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 150px;
+  height: 150px;
+  background: #000;
+  transition: 0.5s;
+  z-index: 10;
+  overflow: hidden;
+}
+
+.card:hover .imgBx {
+  width: 250px;
+  height: 250px;
+}
+
+.card .imgBx::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  height: 150px;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(transparent, #7CB13E,
+      #7CB13E, #7CB13E, transparent);
+  animation: animate2 6s linear infinite;
+}
+
+@keyframes animate2 {
+  0% {
+    transform: translate(-50%, -50%) rotate(360deg);
   }
 
-  .card:hover .imgBx {
-    width: 250px;
-    height: 250px;
+  100% {
+    transform: translate(-50%, -50%) rotate(0deg);
   }
+}
 
-  .card .imgBx::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 500px;
-    height: 150px;
-    transform: translate(-50%, -50%);
-    background: linear-gradient(transparent, #7CB13E,
-    #7CB13E, #7CB13E, transparent);
-    animation: animate2 6s linear infinite;
-  }
-  @keyframes animate2 {
-    0%
-    {
-      transform: translate(-50%, -50%) rotate(360deg);
-    }
-    100%
-    {
-      transform: translate(-50%, -50%) rotate(0deg);
-    }
-  }
+.card .imgBx::after {
+  content: "";
+  position: absolute;
+  background: #292929;
+  inset: 3px;
+}
 
-  .card .imgBx::after {
-    content: "";
-    position: absolute;
-    background: #292929;
-    inset: 3px;
-  }
+.card .imgBx img {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+}
 
-  .card .imgBx img {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 1;
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
-  }
+.card .content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  overflow: hidden;
+}
 
-  .card .content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    overflow: hidden;
-  }
+.card .content .details {
+  padding: 40px 20px 20px 20px;
+  text-align: center;
+  width: 100%;
+  transition: 0.5s;
+  transform: translateY(145px);
+}
 
-  .card .content .details {
-    padding: 40px 20px 20px 20px;
-    text-align: center;
-    width: 100%;
-    transition: 0.5s;
-    transform: translateY(145px);
-  }
+.card:hover .content .details {
+  transform: translateY(0px);
+}
 
-  .card:hover .content .details {
-    transform: translateY(0px);
-  }
+.card .content .details h2 {
+  font-size: 1.25em;
+  font-weight: 600;
+  color: #45f3ff;
+  line-height: 1.2em;
+}
 
-  .card .content .details h2 {
-    font-size: 1.25em;
-    font-weight: 600;
-    color: #45f3ff;
-    line-height: 1.2em;
-  }
-  .card .content .details h2 span {
-    font-size: 0.75em;
-    font-weight: 500;
-    color: #fff;
-  }
-  .card .content .details .data {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
-  }
-  .card .content .details .data h3 {
-    font-size: 1em;
-    color: #45f3ff;
-    line-height: 1.2em;
-    font-weight: 600;
-  }
-  .card .content .details .data h3 span {
-    font-size: 0.85em;
-    font-weight: 400;
-    color: #fff;
-  }
+.card .content .details h2 span {
+  font-size: 0.75em;
+  font-weight: 500;
+  color: #fff;
+}
 
-  /* .card .content .details .actionBtn {
+.card .content .details .data {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.card .content .details .data h3 {
+  font-size: 1em;
+  color: #45f3ff;
+  line-height: 1.2em;
+  font-weight: 600;
+}
+
+.card .content .details .data h3 span {
+  font-size: 0.85em;
+  font-weight: 400;
+  color: #fff;
+}
+
+/* .card .content .details .actionBtn {
     display: flex;
     justify-content: space-between;
     gap: 20px;
@@ -321,59 +430,66 @@ main img {
     opacity: 1;
   } */
 
-  .card .content .details .actionBtn ul {
-    position: relative;
-    display: flex;
-    gap: 40px;
-  }
-  .card .content .details .actionBtn ul li {
-    position: relative;
-    list-style: none;
-    width: 120px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-  }
-  .card .content .details .actionBtn ul li a {
-    position: relative;
-    height: 64px;
-  }
-  .card .content .details .actionBtn ul li .fa {
-    font-size: 4em;
-    -webkit-text-stroke: 2px var(--clr);
-    color: transparent;
-  }
-  .card .content .details .actionBtn ul li::before {
-    
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 0;
-    overflow: hidden;
-    border-bottom: 4px solid var(--clr);
-    transition: 0.5s ease-in-out;
-    font-family: fontAwesome;
-    text-align: center;
-    line-height: 64px;
-    font-size: 4em;
-    color: var(--clr);
-  }
-  .card .content .details .actionBtn ul li:hover::before {
-    height: 100%;
-  }
-  .card .content .details .actionBtn ul li:nth-child(1):before {
-    content: "\f082";
-  }
-  .card .content .details .actionBtn ul li:nth-child(2):before {
-    content: "\f16d";
-  }
-  .card .content .details .actionBtn ul li:nth-child(3):before {
-    content: "\f16a";
-  }
+.card .content .details .actionBtn ul {
+  position: relative;
+  display: flex;
+  gap: 40px;
+}
+
+.card .content .details .actionBtn ul li {
+  position: relative;
+  list-style: none;
+  width: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.card .content .details .actionBtn ul li a {
+  position: relative;
+  height: 64px;
+}
+
+.card .content .details .actionBtn ul li .fa {
+  font-size: 4em;
+  -webkit-text-stroke: 2px var(--clr);
+  color: transparent;
+}
+
+.card .content .details .actionBtn ul li::before {
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  border-bottom: 4px solid var(--clr);
+  transition: 0.5s ease-in-out;
+  font-family: fontAwesome;
+  text-align: center;
+  line-height: 64px;
+  font-size: 4em;
+  color: var(--clr);
+}
+
+.card .content .details .actionBtn ul li:hover::before {
+  height: 100%;
+}
+
+.card .content .details .actionBtn ul li:nth-child(1):before {
+  content: "\f082";
+}
+
+.card .content .details .actionBtn ul li:nth-child(2):before {
+  content: "\f16d";
+}
+
+.card .content .details .actionBtn ul li:nth-child(3):before {
+  content: "\f16a";
+}
 
 
 /* Card End */
-
